--- a/src/scss/30_components/_button.scss
+++ b/src/scss/30_components/_button.scss
@@ -136,7 +136,9 @@ button[disabled="true"] {
 
 .modal-close-button {
     width: var(--modal-close-button-size);
-    height: fit-content;
+    height: var(--modal-close-button-size);
+    padding: 0;
+    line-height: 1;
 }
 
 // Property Box Add Property Button
